# ollama-bench

./: .gitignore  README.md  eval_prompts.txt  example_prompts.txt  more_eval_prompts.txt  pyproject.toml  requirements.txt  verify_install.py
ollama_bench/: __main__.py  cli.py  client.py  models.py
tests/: test_cli.py  test_client.py  test_smoke.py
unladen_swallm/: __init__.py  __main__.py  cli.py  client.py
